# sensor_trigger

./: .pre-commit-config.yaml  CMakeLists.txt  package.xml
include/sensor_trigger/: sensor_trigger.hpp
launch/: jetson_camera_trigger.launch  sensor_trigger.launch
src/: jetson_camera_trigger_node.cpp  sensor_trigger.cpp  sensor_trigger_node.cpp
