<?xml version="1.0"?>
<package format="2">
  <name>sensor_trigger</name>
  <version>0.1.0</version>
  <description>The sensor_trigger package</description>
  <maintainer email="david.wong@tier4.jp">drwnz</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>libgpiod-dev</depend>

</package>
